[tool.black]
line-length = 120
target-version = ['py310']


[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Benedikt Lüken-Winkels <belu02@dfki.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
