[tool.black]
line-length = 120
target-version = ['py310']


[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Benedikt Lüken-Winkels <b.lueken.winkels@gmail.com>", "David Kaub <kaubdav@posteo.de>"]
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
motor = "^3.1.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
httpx = "^0.23.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
